# procweb

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockefile_builder  Dockefile_builder_rust  LICENSE  README.md  package-lock.json  package.json  snapcraft.yaml  tsconfig.json
.github/workflows/: build.yml
appimage-builder/: AppImageBuilder_aarch64.yml  AppImageBuilder_x64.yml  build-appimage_arm64.sh  build-appimage_x64.sh
procweb-qt/: CMakeLists.txt  main.cpp  pwdata.cpp  pwdata.h  pwreader.cpp  pwreader.h  pwsampler.cpp  pwsampler.h  pwstorage.cpp  pwstorage.h  web.qrc
procweb-rust/: 386.js  Cargo.toml  README.md  index.html  main.js  polyfills.js  runtime.js  styles.css
procweb-rust/src/: main.rs  pwdata.rs  pwreader.rs  pwsampler.rs  pwsamplerdocker.rs  pwsamplerproc.rs  pwsamplerthread.rs  pwudsconnector.rs
procweb-webui/: README.md  angular.json  build.sh  karma.conf.js  package-lock.json  package.json  tsconfig.json
procweb-webui/src/: index.html  main.js  main.ts  polyfills.js  proxy.conf.json  styles.sass  styles.scss  test.js
procweb-webui/src/app/: app-routing.module.js  app-routing.module.ts  app.component.html  app.component.js  app.component.sass  app.component.scss  app.component.spec.js  app.component.spec.ts  app.component.ts  app.module.js  app.module.ts  measure.ts  samples.service.spec.ts  samples.service.ts
procweb-webui/src/app/dialog-yes-no/: dialog-yes-no.component.html  dialog-yes-no.component.ts
procweb-webui/src/environments/: environment.js
server/: .gitignore  package-lock.json  package.json
src/: index.ts  storage.ts
