[package]
name = "procweb-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
actix-rt = "2.7.0"
actix-web = "4"
sysinfo = "0.27.7"
serde = { version = "1.0.126", features = ["derive"] }
timer = "0.2.0"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
page_size = "0.5.0"
lazy_static = "1.4.0"
regex = "1"
sysconf = "0.3.4"