[package]
name = "procweb-rust"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0+"
description = "A binary providing a web interface to monitor the resources used by a process on Linux."
homepage = "https://bugfreeblog.duckdns.org/"
readme = "../README.md"
keywords = ["monitor", "process"]
categories = ["Command line utilities", "Development tools", "Embedded development"]

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
actix-rt = "2.7.0"
actix-web = "4"
sysinfo = "0.27.7"
serde = { version = "1.0.126", features = ["derive"] }
timer = "0.2.0"
chrono = "0.4.23"
clap = { version = "4.1.6", features = ["derive"] }
page_size = "0.5.0"
lazy_static = "1.4.0"
regex = "1"
sysconf = "0.3.4"
mime_guess = "2.0.4"
mime = "0.3.16"